// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`angularStories generator: libraries Stories for non-empty Angular library should generate stories file for standalone components 1`] = `
"import type { Meta, StoryObj } from '@storybook/angular';
import { Standalone } from './standalone';
import { expect } from 'storybook/test';

const meta: Meta<Standalone> = {
  component: Standalone,
  title: 'Standalone',
};
export default meta;

type Story = StoryObj<Standalone>;

export const Primary: Story = {
  args: {},
};

export const Heading: Story = {
  args: {},
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/standalone/gi)).toBeTruthy();
  },
};
"
`;

exports[`angularStories generator: libraries Stories for non-empty Angular library should generate stories file for standalone components 2`] = `
"import type { Meta, StoryObj } from '@storybook/angular';
import { SecondaryStandalone } from './secondary-standalone';
import { expect } from 'storybook/test';

const meta: Meta<SecondaryStandalone> = {
  component: SecondaryStandalone,
  title: 'SecondaryStandalone',
};
export default meta;

type Story = StoryObj<SecondaryStandalone>;

export const Primary: Story = {
  args: {},
};

export const Heading: Story = {
  args: {},
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/secondary-standalone/gi)).toBeTruthy();
  },
};
"
`;

exports[`angularStories generator: libraries Stories for non-empty Angular library should generate stories.ts files 1`] = `
"import type { Meta, StoryObj } from '@storybook/angular';
import { TestButton } from './test-button';
import { expect } from 'storybook/test';

const meta: Meta<TestButton> = {
  component: TestButton,
  title: 'TestButton',
};
export default meta;

type Story = StoryObj<TestButton>;

export const Primary: Story = {
  args: {
    buttonType: 'button',
    style: 'default',
    age: 0,
    isOn: false,
  },
};

export const Heading: Story = {
  args: {
    buttonType: 'button',
    style: 'default',
    age: 0,
    isOn: false,
  },
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/test-button/gi)).toBeTruthy();
  },
};
"
`;

exports[`angularStories generator: libraries Stories for non-empty Angular library should ignore paths 1`] = `
"import type { Meta, StoryObj } from '@storybook/angular';
import { TestButton } from './test-button';
import { expect } from 'storybook/test';

const meta: Meta<TestButton> = {
  component: TestButton,
  title: 'TestButton',
};
export default meta;

type Story = StoryObj<TestButton>;

export const Primary: Story = {
  args: {
    buttonType: 'button',
    style: 'default',
    age: 0,
    isOn: false,
  },
};

export const Heading: Story = {
  args: {
    buttonType: 'button',
    style: 'default',
    age: 0,
    isOn: false,
  },
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/test-button/gi)).toBeTruthy();
  },
};
"
`;
